<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2016 Jacob Klinker
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="api_login">Login</string>
    <string name="api_signup">Sign Up</string>
    <string name="api_signup_failed">Cannot sign up on this device, you must register with a primary
        device that has a phone number first!</string>
    <string name="api_skip_signup">Or, if you just want to use the app on this device and not the network
        features such as texting from a tablet or computer, you can skip this step:</string>
    <string name="api_skip">Skip</string>
    <string name="api_email">Email Address</string>
    <string name="api_password">Password</string>
    <string name="api_password_confirmation">Password Confirmation</string>
    <string name="api_name">Name</string>
    <string name="api_phone_number">Phone Number</string>
    <string name="api_connecting">Connecting to server…</string>
    <string name="api_error">An error occurred during the operation</string>
    <string name="api_device_error">An error occurred while adding this device. Let\'s retry!</string>
    <string name="api_add_second_primary_device">Looks like you already have a primary device
        (%1$s) for your account and only one is permitted! Do you want to remove the current
        primary device and set this as the new primary?</string>
    <string name="api_yes">Yes</string>
    <string name="api_no">No</string>
    <string name="api_no_email">No email address entered</string>
    <string name="api_email_invalid">Invalid email address</string>
    <string name="api_no_password">No password entered</string>
    <string name="api_no_password_confirmation">No password confirmation entered</string>
    <string name="api_password_mismatch">Passwords don\'t match</string>
    <string name="api_no_name">No name entered</string>
    <string name="api_no_phone_number">No phone number entered</string>
    <string name="api_login_error">An error occurred logging in, wrong email or password?</string>
    <string name="api_activate_summary">Login to get all of your messages on this device!</string>
    <string name="api_activate_1">1</string>
    <string name="api_activate_2">2</string>
    <string name="api_activate_1_1">Head to</string>
    <string name="api_activate_1_2">tv.klinkerapps.com</string>
    <string name="api_activate_1_3">on a mobile device or computer.</string>
    <string name="api_activate_2_1">On the website</string>
    <string name="api_activate_2_2">enter the code to the right</string>
    <string name="api_activate_2_3">to connect your account!</string>
    <string name="api_confirm_password">Please confirm your password:</string>
    <string name="api_wrong_password">Confirmation failed. Is your password correct?</string>
    <string name="api_email_taken">An error occured logging in, do you already have an account with this email?</string>
    <string name="api_confirm">Confirm</string>
    <string name="api_continue">Continue</string>

</resources>
