<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Jacob Klinker
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/api_window_background"
    android:id="@+id/background">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:background="@color/api_login_background"
        android:padding="16dp"
        android:id="@+id/initial_layout"
        android:elevation="4dp"
        android:visibility="invisible">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/api_login"
            style="?attr/borderlessButtonStyle"
            android:id="@+id/login"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/api_signup"
            style="?attr/borderlessButtonStyle"
            android:id="@+id/signup"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/api_signup_failed"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:id="@+id/signup_failed"
            android:visibility="gone"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/api_divider_color"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/api_skip_signup"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/api_skip"
            style="?attr/borderlessButtonStyle"
            android:id="@+id/skip"/>

    </LinearLayout>

    <View
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:background="@color/api_login_background"
        android:padding="16dp"
        android:id="@+id/login_layout"
        android:elevation="4dp"
        android:visibility="gone"/>

    <View
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:background="@color/api_login_background"
        android:padding="16dp"
        android:id="@+id/signup_layout"
        android:elevation="4dp"
        android:visibility="gone"/>

</FrameLayout>